@@ -44,6 +44,8 @@ Changes in Bitbake 1.9.x:
 	- Add locking for fetchers so only one tries to fetch a given file at a given time
 	- Fix int(0)/None confusion in runqueue.py which causes random gaps in dependency chains	  
 	- Expand data in addtasks
+	- Print the list of missing DEPENDS,RDEPENDS for the "No buildable providers available for required...."
+	  error message.
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
